--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <div class="header">
     <img class="logo" src="tribe.png" alt="Tribe Logo">
   <div class="header">
+    <button class="action-button" id="connect-wallet-button">Connect Wallet</button>
     <h1>Bitpac Management Interface</h1>
   </div>
      <div class="container">
