--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 </div>
 
 <script>
-  // Assuming you've included the necessary Web3.js library
+const connectwallet =
+const connectWallet =
 const connectWalletButton = document.getElementById('connect-wallet-button');
 
 connectWalletButton.addEventListener('click', async () => {
