--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <div class="header">
-    <img class="logo" src="tribe.png" alt="Tribe Logo">
+    <img class="logo" src="Tribe.png" alt="Tribe Logo">
   <div class="header">
     <button class="action-button" id="connect-wallet-button">Connect Wallet</button>
     <h1>Bitpac Management Interface</h1>
