--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     text-align: center;
     margin: 20px 0;
   }
-
-  .actio-button {
-    
+  .custom-ui {
+    width: 1440px;
+    height: 1024px;
+    top: -582px;
+    left: 3512px;
+    position: absolute;
+    background-color: lightgray;
+    border: 2px solid gray;
 
   .action-button {
     padding: 10px 20px;
